Re-create site from scratch. New b+w theme, new site-recovery page.

--- a/theme/css/alt-fonts.css
+++ b/theme/css/alt-fonts.css
@@ -10,10 +10,11 @@ h1, h2, h3 {
 	font-weight: bold;
 }
 
-pre, code {
-	font-family: 'Droid Sans Mono', monospace;
+
+pre {
+        padding-left: 20px;
 }
 
 code {
-	font-size: 0.7em ;
+        font-size: 0.8rem;
 }
